--- a/dj/google.html
+++ b/dj/google.html
@@ -10,6 +10,7 @@
                 text-align: center;
                 font-size: 30px;
                 margin: 30px 0;
+                margin-top: 100px;
             }
         .google{ 
                 width: 500px;
@@ -18,7 +19,7 @@
         .header{
                 width: 800px;
                 height: 100px;
-                position: relative;
+                /* position: relative; */
         }
         .utility{
             position: absolute;
@@ -28,15 +29,18 @@
         .utility ul li{
             display: inline-block;
             padding-right: 10px;
-            }
+        }
         a{
             text-decoration: none;
-            position: absolute;
+            /* position: absolute;
             right: 0;
-            top: 10px;
+            top: 10px; */
         }
         .boxes{width: 800px; height: 300px; background-color: blue;margin-top: 100px; clear: both;}
-        .box1{width:150px; height:140px;margin:5px 5px;background-color: brown;float: left;}
+        .box {
+            width:150px; height:140px;margin:5px 5px;background-color: brown;float: left;
+        }
+        /* .box1{width:150px; height:140px;margin:5px 5px;background-color: brown;float: left;}
         .box2{width:150px; height:140px;margin:5px 5px;background-color: brown;float: left;}
         .box3{width:150px; height:140px;margin:5px 5px;background-color: brown;float: left;}
         .box4{width:150px; height:140px;margin:5px 5px;background-color: brown;float: left;}
@@ -45,7 +49,7 @@
         .box7{width:150px; height:140px;margin: 5px 5px;background-color: brown;float: left;}
         .box8{width:150px; height:140px;margin: 5px 5px;background-color: brown;float: left;}
         .box9{width:150px; height:140px;margin: 5px 5px;background-color: brown;float: left;}
-        .box10{width:150px; height:140px;margin: 5px 5px;background-color: brown;float: left;}
+        .box10{width:150px; height:140px;margin: 5px 5px;background-color: brown;float: left;} */
 
     </style>
 </head>
@@ -65,16 +69,16 @@
             <input type="text" width="400">
         </div>
         <div class="boxes">
-            <div class="box1">box1</div>
-            <div class="box2">box2</div>
-            <div class="box3">box3</div>
-            <div class="box4">box4</div>
-            <div class="box5">box5</div>
-            <div class="box6">box6</div>
-            <div class="box7">box7</div>
-            <div class="box8">box8</div>
-            <div class="box9">box9</div>
-            <div class="box10">box10</div>
+            <div class="box box1">box1</div>
+            <div class="box box2">box2</div>
+            <div class="box box3">box3</div>
+            <div class="box box4">box4</div>
+            <div class="box box5">box5</div>
+            <div class="box box6">box6</div>
+            <div class="box box7">box7</div>
+            <div class="box box8">box8</div>
+            <div class="box box9">box9</div>
+            <div class="box box10">box10</div>
         </div>
     </div>
 </body>
