--- a/dj/layout.html
+++ b/dj/layout.html
@@ -61,24 +61,26 @@
 <body>
 <div class="container">
 
-    <header>     
+    <header>
+        header     
     </header>
     
     <nav>
-        <div class="nav"></div>
+        <div class="nav">nav</div>
     </nav>
 
     <main>
-        <div class="aside1"></div>
+        <div class="aside1">aside</div>
         <div class="articles">
-            <div class="article"></div>
-            <div class="article"></div>
-            <div class="article"></div>
+            <div class="article">article</div>
+            <div class="article">article</div>
+            <div class="article">article</div>
         </div>
-        <div class="aside2"></div>
+        <div class="aside2">aside</div>
     </main>
 
     <footer> 
+        footer
     </footer>
 
 </div> 
