--- a/dj/subway.html
+++ b/dj/subway.html
@@ -111,6 +111,8 @@
         h2{
             display: inline;
             font-size: 50px;
+            background-image: url("./img/bul_tit.png");
+            background-repeat: no-repeat;
         }
         .bannermenu{
             overflow: hidden;
