--- a/dj/subway2.html
+++ b/dj/subway2.html
@@ -29,17 +29,19 @@
         .logo{
             background-image: url("./img/logo_w.png");
             background-repeat: no-repeat;
-            background-position: center bottom;
-            height: 40px;
-            margin-top: 20px;
+            background-position: center center;
+            height: 100%;
+            float: right;
+            width: calc(100% / 3);
         }
         .utility{
-            width: 40%;
+            width: calc(100% / 3);
             height: 100%;
             float: right;
         }
         .utility ul{
-            
+            width: calc(100% / 3);
+            float: right;
         }
 
         .utility ul li{
@@ -111,7 +113,7 @@
         <header>
             <div class="inner">
                 <div class="top">
-                    <div class="logo"></div>
+                    
                     <div class="utility">
                         <ul>
                             <li>option1</li>
@@ -120,6 +122,7 @@
                             <li>option4</li>
                         </ul>
                     </div>
+                    <div class="logo"></div>
                 </div>
                 <div class="bottom">
                     <div class="gnb">
