--- a/dj/subway3.html
+++ b/dj/subway3.html
@@ -397,11 +397,14 @@
             background-color: #292929;
             height: 50%;
         }
+
+        .footerTop ul {
+            overflow: hidden;
+        }
         
         .footerTop ul li{
             float: left;
             padding-right: 15px;
-            margin-top: 20px;
             font-weight: bold;
             color: #666666;
             line-height: 40px;
@@ -573,7 +576,6 @@
                         <li>Subway Listens</li>
                     </ul>
                 </div>
-                <hr>
                 <div class="footerBottom">
                     <span class="addr">서울시 서초구 강남대로 535 프린스빌딩 15층</span>
                     <span class="rep">대표: 콜린클락</span>
