--- a/jun/flex_layout.html
+++ b/jun/flex_layout.html
@@ -17,13 +17,15 @@
 			background: black;
 		}
 
-		/* header height: 150px
-		header 안의 nav height : 50px
-		main height: auto
-		footer: height: 150px
-		aside width: 200px
-		section width: auto
-		section 내부의 div 3개, margin: 10px, 위아래 10px */
+		/* 
+			header height: 150px
+			header 안의 nav height : 50px
+			main height: auto
+			footer: height: 150px
+			aside width: 200px
+			section width: auto
+			section 내부의 div 3개, margin: 10px, 위아래 10px 
+		*/
 
 	</style>
 </head>
