--- a/dj/flex_layout.html
+++ b/dj/flex_layout.html
@@ -3,46 +3,47 @@
     <title>flex</title>
     <style>
         *{margin: 0; padding: 0; box-sizing: border-box;}
-        
+        .container{
+            display: flex;
+            flex-direction:column;
+            height: 100vh;
+        }
         header{
             height: 150px;
             width: 100%;
             background: springgreen;
             display: flex;
-            justify-content: flex-end;
-            flex-direction: row;
-            align-items: flex-end;
         }
 
         .nav{
             width: 100%;
             background-color: teal;
             height: 50px; 
+            margin-top: auto;
         }
 
         main{
-            height: auto;
             width: 100%;
+            flex-grow: 1;
+            display: flex;
         }
 
         aside{
             width: 200px;
             background: steelblue;
-            height: auto;
         }
 
         section{
-            width: auto;
             background-color: powderblue;
             padding: 10px;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-grow: 1;
         }
 
         .section{
             flex-grow: 1;
             background-color: royalblue;
+            height: auto;
         }
 
         .section:nth-child(2){
@@ -54,7 +55,6 @@
             width: 100%;
             height: 150px;
         }
-
     </style>
 </head>
 <body>
