--- a/dj/woorimart2.html
+++ b/dj/woorimart2.html
@@ -45,7 +45,7 @@
             display:none
         }
 
-        .saleInfo .cover img:hover{
+        .saleInfo img:hover .cover{
             display: flex;
         }
 
