--- a/dj/monami.html
+++ b/dj/monami.html
@@ -22,34 +22,39 @@
 
         .container .img .cover{
             position: absolute;
-            left: 10px;
-            right: 10px;
-            width: 427px;
-            height: 636px;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 100%;
             background: hotpink;
             display: none;
-            animation-name: move;
         } 
 
-        .container .img > img:hover .cover {
+        .img .cover .center{
+            color: white;
+            font-weight: bold;
+            width: 100%;
+            margin: auto;
+        }
+
+        .center .font{
+            text-align: center;
+            margin-bottom: 10px;
+            font-size: 20px;
+        }
+        .container .img:hover .cover {
             display: flex;
         } 
 
-        .container .img > img:hover .cover img{
+        .container .img:hover .cover img{
             display: flex; 
         } 
         .container .img .cover img{
-            margin: auto;
             width: 37px;
-            animation-name: move;
-            animation-duration: 1s;
-			animation-iteration-count: infinite;
-			animation-timing-function: linear;
-			animation-timing-function: ease-in;
-        }
-
-        @keyframes move{
-            100%{transform: rotate(360deg);}
+            margin: auto;
+            transform: rotate(360deg);
+            transition: 1s;
         }
     </style>
 </head>
@@ -57,7 +62,12 @@
     <div class="container">
         <div class="img">
             <img src="./img/monami/1.jpg" alt="">
-            <div class="cover">FOUNTAIN PEN 라인만년필<img src="./img/monami/icon.png"></div>
+            <div class="cover">
+                <div class="center">
+                    <div class="font">FOUNTAIN PEN 라인만년필</div>
+                    <img src="./img/monami/icon.png">
+                </div>
+            </div>
         </div>
     </div>
 </body>
