--- a/dj/woorimart2.html
+++ b/dj/woorimart2.html
@@ -28,9 +28,10 @@
             height: 430px;
             position: relative;
             margin-bottom: 20px;
+            cursor: pointer;
         }
 
-        .saleInfo .img img{
+        .saleInfo .img > img{
             width: 100%;
         }
 
@@ -39,13 +40,14 @@
             left: 0;
             right: 0;
             bottom: 0;
+            right: 0;
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.7);
             display:none
         }
 
-        .saleInfo img:hover .cover{
+        .saleInfo .img:hover .cover{
             display: flex;
         }
 
