--- a/dj/flex_layout.html
+++ b/dj/flex_layout.html
@@ -27,6 +27,11 @@
             flex-grow: 1;
             display: flex;
         }
+        .box{
+            width: 1100px;
+            margin: 0 auto;
+            background-color: lightsalmon;
+        }
 
         aside{
             width: 200px;
