--- a/dj/mediaquery.html
+++ b/dj/mediaquery.html
@@ -3,10 +3,13 @@
     <title>mediaquery</title>
     <style>
         *{margin: 0; padding: 0;}
+        .container{
+            display: flex;
+            flex-direction: row;
+        }
         .box{
             height: 200px;
             width: 200px;
-            display: inline-block;
         }
         .box1 { background-color: yellowgreen;}
         .box2 { background-color: teal;}
@@ -14,7 +17,9 @@
         .box4 { background-color: springgreen;}
 
         @media screen and (max-width: 700px) {
-            .box {display: block;}
+            .container{
+                flex-direction: column;
+            }
         }
     </style>
 </head>
