--- a/dj/vitalbeautie.html
+++ b/dj/vitalbeautie.html
@@ -204,8 +204,139 @@
 
         .found1{
             height: 310px;
-            background-image: url("./img/vitalbeautie/");
+            background-image: url("./img/vitalbeautie/111.jpg");
             border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        .found2{
+            height: 310px;
+            background-image: url("./img/vitalbeautie/222.jpg");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        .found3{
+            height: 310px;
+            background-image: url("./img/vitalbeautie/333.jpg");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        .found4{
+            height: 310px;
+            background-image: url("./img/vitalbeautie/444.jpg");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        .found5{
+            height: 310px;
+            background-image: url("./img/vitalbeautie/555.jpg");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        .putIn{
+            display: grid;
+            grid-template-columns: repeat(4,1fr);
+            grid-gap: 20px;
+            padding: 10px;
+            width: 100%;
+        }
+
+        .put_In1{
+            height: 280px;
+            background-image: url("./img/vitalbeautie/1_1.png");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        .put_In2{
+            height: 280px;
+            background-image: url("./img/vitalbeautie/2_2.png");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        .put_In3{
+            height: 280px;
+            background-image: url("./img/vitalbeautie/3_3.png");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        .put_In4{
+            height: 280px;
+            background-image: url("./img/vitalbeautie/4_4.png");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        .put_In5{
+            height: 280px;
+            background-image: url("./img/vitalbeautie/5_5.png");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+            grid-column: 1/3;
+        }
+
+        .put_In6{
+            height: 280px;
+            background-image: url("./img/vitalbeautie/6_6.png");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        .put_In7{
+            height: 280px;
+            background-image: url("./img/vitalbeautie/7_7.png");
+            border: 1px solid lightgray;
+            cursor: pointer;
+            background-size: 100% 100%;
+        }
+
+        footer{
+            width: 100%;
+        }
+        
+        footer .box{
+            width: 100%;
+            height: 80px;
+            background-color: #cccccc;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;  
+            padding: 10px;        
+        }
+        .footBox{
+            padding: 10px;
+        }
+
+        .footBox span{
+            cursor: pointer;
+            }
+        
+        .footBox div{
+            text-align: center;
+            cursor: pointer;
+        }
+
+        footer .right{
+            width: 100%;
+            background-color: grey;
+            text-align: center; 
         }
     </style>
 </head>
@@ -300,43 +431,77 @@
             </div>
             <div class="find">
                 <div class="found1">
-                    <div class="name"></div>
-                    <div class="explain"></div>
+                    <div class="name">나의 여성 건강 상태는?</div>
+                    <div class="explain">여성 건강 지수 테스트</div>
                 </div>
-                <div class="found2"></div>
-                <div class="found3"></div>
-                <div class="found4"></div>
-                <div class="found5"></div>
+                <div class="found2">
+                    <div class="name">나의 신체 나이는?</div>
+                    <div class="explain">건강과 재미를 함께 즐겨보아요.</div>
+                </div>
+                <div class="found3">
+                    <div class="name">생애주기별 맞춤검색</div>
+                    <div class="explain">추천드리는 맞춤 제품을 경험하세요</div>
+                </div>
+                <div class="found4">
+                    <div class="name">건강고민별 제품검색</div>
+                    <div class="explain">여러분의 고민 해결</div>
+                </div>
+                <div class="found5">
+                    <div class="name">키워드 맞춤검색</div>
+                    <div class="explain">인기검색어도 확인 하실수 있습니다.</div>
+                </div>
             </div>
 
             <div class="title">
                 <h2>아름다움<b>을 보고 담다</b><small>STEP.04</small></h2>
             </div>
             <div class="putIn">
-                <div class="put_in"></div>
-                <div class="put_in"></div>
-                <div class="put_in"></div>
-                <div class="put_in"></div>
-                <div class="put_in"></div>
-                <div class="put_in"></div>
-                <div class="put_in"></div>
+                <div class="put_in1">
+                    <div class="name">인삼</div>
+                    <div class="explain">땅의 기운을 그대로 받은 신의 선물</div>
+                </div>
+                <div class="put_in2">
+                    <div class="name">녹차</div>
+                    <div class="explain">현대인의 건강을 위한 푸른빛의 지혜</div>
+                </div>
+                <div class="put_in3">
+                    <div class="name">콩</div>
+                    <div class="explain">작은 알맹이에 담겨있는 아름다운 힘</div>
+                </div>
+                <div class="put_in4">
+                    <div class="name">History of VITALBEAUTIE</div>
+                    <div class="explain">아름다움을 위한 43년의 역사</div>
+                </div>
+                <div class="put_in5">
+                    <div class="name">건강함과 아름다움에 대한 새로운 진실</div>
+                    <div class="explain">진정한 아름움은 내면에서 가꾸어 외면으로 나타나는 것</div>
+                </div>
+                <div class="put_in6">
+                    <div class="name">창의적 생각</div>
+                    <div class="explain">새로움의 실현을 위한<br>창의적 생각</div>
+                </div>
+                <div class="put_in7">
+                    <div class="name">제형기술</div>
+                    <div class="explain">NDS(Nutirition Delivery System)<br>기술도입</div>
+                </div>
             </div>
         </section>
 
         <footer>
             <div class="box">
-                <span class="service"></span>
-                <span class="personal"></span>
-                <span class="video"></span>
-                <span class="point"></span>
-                <span class="siteMap"></span>
-                <div class="customer"></div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <div class="footBox">
+                    <span class="service">서비스이용약관</span>
+                    <span class="personal">개인정보처리방침</span>
+                    <span class="video">영상정보처리방침</span>
+                    <span class="point">뷰티포인트</span>
+                    <span class="siteMap">사이트맵</span>
+                    <div class="customer">고객상담팀(수신자요금부담)080.023.5454(월~금AM 09:00 ~ PM 06:00)</div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>   
             </div>
-
-            <div class="right"></div>
+            <div class="right">&copy;AMOREPACIFIC CORPORATION. All rights reserved.</div>
         </footer>
     </div>
 </body>
