--- a/dj_js/for.html
+++ b/dj_js/for.html
@@ -1,15 +1,11 @@
 <html>
 <body>
-    <script>
-        for (var i = 1; i <= 9; i++) {
-            console.log(' X ' + i + ' = ' + i * );
-        }
-
-        for (var i = 1; i <= 9; i++) {
-            console.log(' X ' + i + ' = ' + i * );
-        }
-
-
+    <script>  
+        for (var i = 2; i <= 9; i++) {  
+            for (var l = 1; l <= 9; l++) {
+                console.log(i + 'X'  + l + ' = ' + l * i);
+            }
+        }      
     </script>
 </body>
 </html>
